<resources>
    <string name="app_name">Information Board</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--  Menu Drawer Strings  -->
    <string name="ads">Объявления</string>
    <string name="ads_all_ads">Все объявления</string>
    <string name="ads_my_ads">Мои объявления</string>
    <string name="ads_cars">Автомобили</string>
    <string name="ads_pcs">Компьютеры</string>
    <string name="ads_smartphones">Смартфоны</string>
    <string name="ads_dms_appliances">Бытовая техника</string>
    <string name="acc">Аккаунт</string>
    <string name="acc_sign_up">Регистрация</string>
    <string name="acc_sign_in">Вход</string>
    <string name="acc_sign_out">Выход</string>
    <string name="acc_not_reg">Войдите или зарегистрируйтесь!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--  Sign Dialog  -->
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться!</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения аккаунта, пожалуйста подтвердите аккаунт!</string>
    <string name="send_verification_error">Не удалось отправить e-mail для подтверждения!</string>
    <string name="sign_in_error">Не удалось войти!</string>
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="email_reset_dialog_message">Для восстановления пароля введите E-mail вашего аккаунта!</string>

    <string name="link_done">Аккаунт успешно зарегистрирован и подключен к Google аккаунту</string>
    <string name="enter_to_google">Такой E-mail уже зарегистрирован, для добавления пароля войдите по Google аккаунту</string>

    <!--  Edit Ads Activity  -->
    <string name="country">*Страна</string>
    <string name="select_country">Выберите страну</string>
    <string name="city">*Город</string>
    <string name="select_city">Выберите город</string>
    <string name="index">*Индекс</string>
    <string name="index_hint">Индекс</string>
    <string name="tel">*Телефон</string>
    <string name="tel_hint">Номер телефона</string>
    <string name="category">*Категория</string>
    <string name="select_category">Выберите категорию</string>
    <string name="name">*Название</string>
    <string name="name_hint">Укажите название</string>
    <string name="price">*Цена</string>
    <string name="price_hint">Укажите цену</string>
    <string name="description">*Описание</string>
    <string name="description_hint">Описание</string>
    <string name="with_send">С отправкой</string>
    <string name="send">Отправка</string>
    <string name="publish">Опубликовать</string>

    <!--  Advert List Item  -->
    <string name="title_price">Цена:</string>
</resources>