<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ads">
        <menu>
            <item android:title="@string/ads_my_ads" android:id="@+id/id_my_ads"/>
            <item android:title="@string/ads_cars" android:id="@+id/id_cars"/>
            <item android:title="@string/ads_pcs" android:id="@+id/id_pcs"/>
            <item android:title="@string/ads_smartphones" android:id="@+id/id_smartphones"/>
            <item android:title="@string/ads_dms_appliances" android:id="@+id/id_dms_appliances"/>
        </menu>
    </item>

    <item android:title="@string/acc">
        <menu>
            <item android:title="@string/acc_sign_up" android:id="@+id/id_sign_up"/>
            <item android:title="@string/acc_sign_in" android:id="@+id/id_sign_in"/>
            <item android:title="@string/acc_sign_out" android:id="@+id/id_sign_out"/>
        </menu>
    </item>

</menu>